--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     // glide
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+
+    implementation 'com.thefinestartist:finestwebview:1.2.7'
 }
